updated the zurb template a bit

--- a/index.html
+++ b/index.html
@@ -13,17 +13,9 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text">Yeti Agency</li>
-          <li><a href="#">One</a></li>
-          <li><a href="#">Two</a></li>
-        </ul>
-      </div>
-      <div class="top-bar-right">
-        <ul class="menu">
-          <li><a href="#">Three</a></li>
-          <li><a href="#">Four</a></li>
-          <li><a href="#">Five</a></li>
-          <li><a href="#">Six</a></li>
+          <li class="menu-text">Caleb Lobell</li>
+          <li><a href="#">cjlobell@gmail.com</a></li>
+          <li><a href="https://www.instagram.com/caleb27._/">Instagram</a></li>
         </ul>
       </div>
     </div>
@@ -31,50 +23,38 @@
 
     <div class="callout large">
       <div class="row column text-center">
-        <h1>Changing the World Through Design</h1>
+        <h1>Smart</h1>
         <p class="lead">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Nullam in dui mauris.
+          Why was everything in latin
         </p>
         <a href="#" class="button large">Learn More</a>
-        <a href="#" class="button large hollow">Learn Less</a>
       </div>
     </div>
 
     <div class="row">
       <div class="medium-6 columns medium-push-6">
-        <img class="thumbnail" src="https://placehold.it/750x350">
+        <img src="WIN_20190922_22_12_48_Pro.jpg" alt="My old roommate and I">
       </div>
       <div class="medium-6 columns medium-pull-6">
-        <h2>Our Agency, our selves.</h2>
+        <h2>Yo what's up.</h2>
         <p>
-          Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
-          In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
-          Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris,
-          quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim.
-          Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor.
+          More latin.
         </p>
       </div>
     </div>
 
     <div class="row">
       <div class="medium-4 columns">
-        <h3>Photoshop</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
-        In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
-        Nulla fringilla, orci ac euismod semper, magna.</p>
+        <h3>Why?</h3>
+        <p>More latin.</p>
       </div>
       <div class="medium-4 columns">
-        <h3>Javascript</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
-        In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
-        Nulla fringilla, orci ac euismod semper, magna.</p>
+        <h3>Machine Learning</h3>
+        <p>Would be pretty cool to work on.</p>
       </div>
       <div class="medium-4 columns">
-        <h3>Marketing</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
-        In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
-        Nulla fringilla, orci ac euismod semper, magna.</p>
+        <h3>AI</h3>
+        <p>Would be cool to see.</p>
       </div>
     </div>
 
@@ -82,11 +62,10 @@
 
     <div class="row column">
       <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><a href="#"><div class="stat">28</div><span>Websites</span></a></li>
-        <li><a href="#"><div class="stat">43</div><span>Apps</span></a></li>
-        <li><a href="#"><div class="stat">95</div><span>Ads</span></a></li>
-        <li><a href="#"><div class="stat">59</div><span>Cakes</span></a></li>
-        <li><a href="#"><div class="stat">18</div><span>Logos</span></a></li>
+        <li><a href="#"><div class="stat">2</div><span>Websites</span></a></li>
+        <li><a href="#"><div class="stat">0</div><span>Apps</span></a></li>
+        <li><a href="#"><div class="stat">0</div><span>Ads</span></a></li>
+        <li><a href="#"><div class="stat">0</div><span>Logos</span></a></li>
       </ul>
     </div>
 
@@ -139,10 +118,8 @@
 
     <div class="row column">
       <ul class="menu">
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
-        <li><a href="#">Four</a></li>
+        <li><a href="#">No support.</a></li>
+        <li><a href="#">We are sorry.</a></li>
       </ul>
     </div>
 
