updated linkedin link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="top-bar-left">
         <ul class="menu">
           <li class="menu-text">Caleb Lobell</li>
-          <li><a href="#">cjlobell@gmail.com</a></li>
+          <li><a href="https://www.linkedin.com/in/caleb-lobell-255204230/">Linkedin</a></li>
           <li><a href="https://www.instagram.com/caleb27._/">Instagram</a></li>
         </ul>
       </div>
@@ -23,9 +23,9 @@
 
     <div class="callout large">
       <div class="row column text-center">
-        <h1>Smart</h1>
+        <h1>DND is cool</h1>
         <p class="lead">
-          Why was everything in latin
+          You should play it
         </p>
         <a href="#" class="button large">Learn More</a>
       </div>
@@ -45,7 +45,7 @@
 
     <div class="row">
       <div class="medium-4 columns">
-        <h3>Why?</h3>
+        <h3>Why latin?</h3>
         <p>More latin.</p>
       </div>
       <div class="medium-4 columns">
