--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>ISDS 3107</title>
     <link rel="stylesheet"
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   </head>
@@ -27,7 +27,7 @@
         <p class="lead">
           You should play it
         </p>
-        <a href="#" class="button large">Learn More</a>
+        <a href="https://www.dndbeyond.com/" class="button large">Learn More</a>
       </div>
     </div>
 
