--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>ISDS 3107</title>
     <link rel="stylesheet"
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   </head>
@@ -23,6 +23,7 @@
 
     <div class="callout large">
       <div class="row column text-center">
+          <img src="WIN_20190922_22_12_48_Pro.jpg" alt="My old roommate and I">
         <h1>DND is cool</h1>
         <p class="lead">
           You should play it
