--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="callout large">
       <div class="row column text-center">
-          <img src="tiamat-email.jpg" alt="My old roommate and I">
+          <img src="tiamat-email.jpg" alt="dragons">
         <h1>DND is cool</h1>
         <p class="lead">
           You should play it
